fix: usr: Added inventory caching, fixed empty tile z-index

--- a/src/components/steam/components/responsive-inventory-list/responsive-inventory-list.module.scss
+++ b/src/components/steam/components/responsive-inventory-list/responsive-inventory-list.module.scss
@@ -8,3 +8,7 @@
   justify-content: center;
   transition: transform 100ms linear;
 }
+
+.empty {
+  z-index: -1;
+}
